
v1.4

 - Added settings for multiple thumbnail previews
 - Improved rotation
   - Thumbnail now updates when dragging
   - Fixed slider direction
   - Restricted to 180 degree range (Full rotation is redundant)

v1.3

 - Added "Discard EXIF" option
 - Added crop toggle to header bar
 - Fixed export dimension indicator when crop disabled

v1.2

 - Added new app icon
 - Added custom downscale entry
 - Fixed click preview to switch to circle not working on first click
 - Fixed and changed 1500 downscale value to 1920

v1.1

 - Tweaked selection rectangle to not slide when resizing past border
 - Fixed preview not refreshing on image load
 - Fixed unnecessary redrawing on mouse motion
